added the new position belief in a few locations